--- a/index.html
+++ b/index.html
@@ -13,49 +13,55 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="logo">Web<span class="logo-style">Studio</span></a>
-        <ul class="header-nav">
-          <li><a href="./index.html" class="header-nav-item">Studio</a></li>
-          <li><a href="" class="header-nav-item">Portfolio</a></li>
-          <li><a href="" class="header-nav-item">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="address-list">
-          <li><a href="mailto:info@devstudio.com" class="address-list-item">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="address-list-item">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo">Web<span class="logo-style">Studio</span></a>
+          <ul class="header-nav">
+            <li><a href="./index.html" class="header-nav-item">Studio</a></li>
+            <li><a href="" class="header-nav-item">Portfolio</a></li>
+            <li><a href="" class="header-nav-item">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-list">
+            <li><a href="mailto:info@devstudio.com" class="address-list-item">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="address-list-item">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="main-banner">
-        <h1 class="main-banner-header">Effective Solutions for Your Business</h1>
-        <button type="button" class="main-banner-btn">Order Service</button>
+      <section class="main-banner section">
+          <div class="container">
+            <h1 class="main-banner-header">Effective Solutions for Your Business</h1>
+            <button type="button" class="main-banner-btn">Order Service</button>
+          </div>
+        </section>
+        <section class="features section">
+          <div class="container">
+            <!-- <h2 class="features-title">Our Features</h2> -->
+            <ul>
+              <li>
+                <h3 class="features-header">Strategy</h3>
+                <p class="features-text">Our goal is to identify the business
+                problem to walk away with the perfect and creative solution.</p>
+              </li>
+              <li>
+                <h3 class="features-header">Punctuality</h3>
+                <p class="features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+              </li>
+              <li>
+                <h3 class="features-header">Diligence</h3>
+                <p class="features-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+              </li>
+              <li>
+                <h3 class="features-header">Technologies</h3>
+                <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+              </li>
+            </ul>
+          </div>
       </section>
-      <section class="features">
-        <h2 class="features-title">Our Features</h2>
-        <ul>
-          <li>
-            <h3 class="features-header">Strategy</h3>
-            <p class="features-text">Our goal is to identify the business
-            problem to walk away with the perfect and creative solution.</p>
-          </li>
-          <li>
-            <h3 class="features-header">Punctuality</h3>
-            <p class="features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-          </li>
-          <li>
-            <h3 class="features-header">Diligence</h3>
-            <p class="features-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-          </li>
-          <li>
-            <h3 class="features-header">Technologies</h3>
-            <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-          </li>
-        </ul>
-      </section>
-      <section class="team">
+      <section class="team section">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
           <li class="team-list-item">
@@ -80,7 +86,7 @@
           </li>
         </ul>
       </section>
-      <section  id="portfolio" class="portfolio">
+      <section  id="portfolio" class="portfolio section">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li>
