--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <nav class="header-nav">
           <a href="./index.html" class="logo">Web<span class="logo-style">Studio</span></a>
-          <ul class="header-nav">
+          <ul class="header-list">
             <li><a href="./index.html" class="header-nav-item">Studio</a></li>
             <li><a href="" class="header-nav-item">Portfolio</a></li>
             <li><a href="" class="header-nav-item">Contacts</a></li>
@@ -39,22 +39,22 @@
         </section>
         <section class="features section">
           <div class="container">
-            <!-- <h2 class="features-title">Our Features</h2> -->
-            <ul>
-              <li>
+            <h2 class="features-title visually-hidden">Our Features</h2>
+            <ul class="features-list">
+              <li class="features-item">
                 <h3 class="features-header">Strategy</h3>
                 <p class="features-text">Our goal is to identify the business
                 problem to walk away with the perfect and creative solution.</p>
               </li>
-              <li>
+              <li class="features-item">
                 <h3 class="features-header">Punctuality</h3>
                 <p class="features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
               </li>
-              <li>
+              <li class="features-item">
                 <h3 class="features-header">Diligence</h3>
                 <p class="features-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
               </li>
-              <li>
+              <li class="features-item">
                 <h3 class="features-header">Technologies</h3>
                 <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
               </li>
@@ -62,29 +62,39 @@
           </div>
       </section>
       <section class="team section">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-list-item">
-            <img src="./images/team-img-1.jpg" alt="product designer photo" width="264" height="260">
-            <h3 class="team-list-header">Mark Guerrero</h3>
-            <p class="team-list-text">Product Designer</p>
-          </li>
-          <li class="team-list-item">
-            <img src="./images/team-img-2.jpg" alt="frontend developer photo" width="264" height="260">
-            <h3 class="team-list-header">Tom Ford</h3>
-            <p class="team-list-text">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img src="./images/team-img-3.jpg" alt="marketing photo" width="264" height="260">
-            <h3 class="team-list-header">Camila Garcia</h3>
-            <p class="team-list-text">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img src="./images/team-img-4.jpg" alt="UI designer photo " width="264" height="260">
-            <h3 class="team-list-header">Daniel Wilson</h3>
-            <p class="team-list-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-list-item">
+              <img src="./images/team-img-1.jpg" alt="product designer photo" width="264" height="260">
+              <div class="worker-info">
+                <h3 class="team-list-header">Mark Guerrero</h3>
+                <p class="team-list-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img src="./images/team-img-2.jpg" alt="frontend developer photo" width="264" height="260">
+              <div class="worker-info">
+                <h3 class="team-list-header">Tom Ford</h3>
+                <p class="team-list-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img src="./images/team-img-3.jpg" alt="marketing photo" width="264" height="260">
+              <div class="worker-info">
+                <h3 class="team-list-header">Camila Garcia</h3>
+                <p class="team-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img src="./images/team-img-4.jpg" alt="UI designer photo " width="264" height="260">
+              <div class="worker-info">
+                <h3 class="team-list-header">Daniel Wilson</h3>
+                <p class="team-list-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section  id="portfolio" class="portfolio section">
         <h2 class="portfolio-title">Our Portfolio</h2>
