--- a/index.html
+++ b/index.html
@@ -97,44 +97,60 @@
         </div>
       </section>
       <section  id="portfolio" class="portfolio section">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li>
-            <img src="./images/portfolio-img-1.jpg" alt="Banking App" width="360" height="300">
-            <h3 class="portfolio-list-header">Banking App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li>
-            <img src="./images/portfolio-img-2.jpg" alt="Cashless Payment" width="360" height="300">
-            <h3 class="portfolio-list-header">Cashless Payment</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/portfolio-img-3.jpg" alt="Meditation App" width="360" height="300">
-            <h3 class="portfolio-list-header">Meditation App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li>
-            <img src="./images/portfolio-img-4.jpg" alt="Taxi Service" width="360" height="300">
-            <h3 class="portfolio-list-header">Taxi Service</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/portfolio-img-5.jpg" alt="Screen Illustrations" width="360" height="300">
-            <h3 class="portfolio-list-header">Screen Illustrations</h3>
-            <p class="portfolio-list-text">Design</p>
-          </li>
-          <li>
-            <img src="./images/portfolio-img-6.jpg" alt="Online Courses" width="360" height="300">
-            <h3 class="portfolio-list-header">Online Courses</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img src="./images/portfolio-img-1.jpg" alt="Banking App" width="360" height="300">
+              <div class="app-info">
+                <h3 class="portfolio-list-header">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolio-img-2.jpg" alt="Cashless Payment" width="360" height="300">
+              <div class="app-info">
+                <h3 class="portfolio-list-header">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolio-img-3.jpg" alt="Meditation App" width="360" height="300">
+              <div class="app-info">
+                <h3 class="portfolio-list-header">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolio-img-4.jpg" alt="Taxi Service" width="360" height="300">
+              <div class="app-info">
+                <h3 class="portfolio-list-header">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolio-img-5.jpg" alt="Screen Illustrations" width="360" height="300">
+              <div class="app-info">
+                <h3 class="portfolio-list-header">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolio-img-6.jpg" alt="Online Courses" width="360" height="300">
+              <div class="app-info">
+                <h3 class="portfolio-list-header">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo">Web<span class="footer-logo-style">Studio</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <div class="container">
+        <a href="./index.html" class="footer-logo">Web<span class="footer-logo-style">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </div>
     </footer>
   </body>
 </html>
