--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-nav">
           <a href="./index.html" class="logo">Web<span class="logo-style">Studio</span></a>
           <ul class="header-list">
