--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <section class="features section">
           <div class="container">
-            <h2 class="features-title visually-hidden">Our Features</h2>
+            <h2 class="visually-hidden">Our Features</h2>
             <ul class="features-list">
               <li class="features-item">
                 <h3 class="features-header">Strategy</h3>
